db-host.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-host
spec:
  selector:
    app: db-host
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-host
  template:
    metadata:
      labels:
        app: db-host
    spec:
      containers:
        - name: db-host
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 3333
