ecommerce.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce
spec:
  selector:
    app: ecommerce
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: ecommerce
          image: teabreak/thesis-ecomerce:latest
          ports:
            - name: ecommerce
              containerPort: 8082
