recommend.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommender
spec:
  selector:
    app: recommender
  type: ClusterIP
  ports:
    - port: 9180
      targetPort: 9180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommender
  template:
    metadata:
      labels:
        app: recommender
    spec:
      containers:
        - name: recommender
          image: teabreak/recommender_service:latest
          ports:
            - containerPort: 9180
