ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: thesis-ingress

spec:
  tls:
    - secretName: dummy-tls
      hosts: 
        - dummyquest.dev
  rules:
      - host: dummyquest.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: db-host-service
                  port:
                    number: 3333
      - host: web.dummyquest.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: web-service
                  port:
                    number: 3000
      - host: be.dummyquest.dev
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: ecommerce-service
                  port:
                    number: 8082
